Bug 257721 nsPresShell::PostAttributeChange needs to construct its nsAttributeChangeRequest (HandlePostedAttributeChanges was already calling the destructor) r+sr=roc